<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="#7F000000"
    android:backgroundTintMode="src_atop"
    android:background="@mipmap/registeration"
    tools:context="com.example.mohamedramadan.storemanager.LoginActivity">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registeration"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/textOfBackground"
        />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:backgroundTint="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_of_email"
        android:drawableLeft="@drawable/email_icon"
        style="@style/style_EditText"
        android:inputType="textEmailAddress"
        />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textOfBackground"
            >
    <EditText
        android:drawableLeft="@drawable/password"
        android:backgroundTint="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_of_password"
        android:inputType="textPassword"
        style="@style/style_EditText"
        android:drawableStart="@drawable/password"

        />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textOfBackground">
    <EditText
        android:drawableLeft="@drawable/password"
        android:backgroundTint="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_of_Re_password"
        android:inputType="textPassword"
        style="@style/style_EditText"
        android:drawableStart="@drawable/password"
        />
   </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singup"
            android:textAllCaps="false"
            android:background="@drawable/mybuton"
            android:layout_gravity="center"
            android:padding="16dp"
            android:textColor="#fff"
            android:textStyle="bold"
            />
    </LinearLayout>
   </ScrollView>
</LinearLayout>