<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbackground"
    android:backgroundTint="#7F000000"
    android:backgroundTintMode="src_atop"
    android:orientation="vertical"
    tools:context="com.example.mohamedramadan.storemanager.LoginActivity"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/textOfBackground"
                android:textSize="50sp"
                android:textStyle="bold" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textOfHint"
                >
            <EditText
                style="@style/style_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email_icon"
                android:hint="@string/hint_of_email"
                android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/textOfHint"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/textOfHint"
                >
            <android.support.design.widget.TextInputEditText
                style="@style/style_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff"
                android:drawableLeft="@drawable/password"
                android:hint="@string/hint_of_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp">

                <Button
                    style="list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybuton"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybuton"
                    android:onClick="singup"
                    android:text="@string/singup"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>